--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=Tyler2811_8.2CDevSecOps
-sonar.organization=Tyler2811
+sonar.organization=tyler2811-1
 sonar.host.url=https://sonarcloud.io
 sonar.login=${SONAR_TOKEN}
 
