--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,10 +2,6 @@ sonar.projectKey=Tyler2811_8.2CDevSecOps
 sonar.organization=tyler2811-1
 sonar.host.url=https://sonarcloud.io
 sonar.login=${SONAR_TOKEN}
-
 sonar.sources=.
-sonar.exclusions=node_modules/**,**/*.test/**
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-
-sonar.projectName=NodeJS Goof Vulnerable App
 sonar.sourceEncoding=UTF-8
+sonar.exclusions=node_modules/**,build/**
